<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddVo">

    <EditText
        android:id="@+id/Ja"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Ja"
        android:layout_margin="10dp"
        />

    <EditText
        android:id="@+id/ka"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ka"
        android:layout_margin="10dp"
         />

    <EditText
        android:id="@+id/Ch"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Ch"
        android:layout_margin="10dp"
         />

    <Button
        android:id="@+id/commit"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:text="commit"
        android:onClick="commit"/>

</LinearLayout>